--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: mattobrienm00/jekyll-now
+  github: mattobrienm00/mattobrienm00.github.io
   instagram: 
   linkedin: 
   pinterest: 
